Add stryker step to submit to dashboard