@@ -138,7 +138,6 @@ object SafetyPlugin extends AutoPlugin {
       Keys.javaOptions in Test ++= Seq(
         "-Xms512M",
         "-Xmx2048M",
-        "-XX:MaxPermSize=2048M",
         "-XX:+CMSClassUnloadingEnabled"
       ),
       Keys.parallelExecution in Test := false,
